--- a/CMHAVoucherFinder/CMHAVoucherFinder.csproj
+++ b/CMHAVoucherFinder/CMHAVoucherFinder.csproj
@@ -242,7 +242,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\PropertyImage.cs" />
     <Compile Include="Models\Property.cs" />
-    <Compile Include="PropertiesController.cs" />
+    <Compile Include="Controllers\PropertiesController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
